--- a/fiap.webapp.check2.hospital/fiap.webapp.check2.hospital/Views/Home/Index.cshtml
+++ b/fiap.webapp.check2.hospital/fiap.webapp.check2.hospital/Views/Home/Index.cshtml
@@ -21,9 +21,9 @@
 
                     <h3 style="display: flex; justify-content: center;" class="mb-3">Pacientes</h3>
                     <div class="mx-auto row justify-content-center">
-                        <button type="button" class="mb-3 btn btn-danger" data-toggle="modal" data-target="#modalConfirma">
+                        <a type="button" class="mb-3 btn btn-danger" asp-action="index" asp-controller="paciente">
                             Listagem de Pacientes
-                        </button>
+                        </a>
                     </div>
                 </div>
             </div>
