--- a/fiap.webapp.check2.hospital/fiap.webapp.check2.hospital/Views/Paciente/Index.cshtml
+++ b/fiap.webapp.check2.hospital/fiap.webapp.check2.hospital/Views/Paciente/Index.cshtml
@@ -1,16 +1,35 @@
-﻿@{ ViewData["title"] = "Cadastrar venda"; }
+﻿@{ ViewData["title"] = "Pacientes"; }
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.11/jquery.mask.min.js"></script>
 
-<h2 class="text-center">Cadastro de Paciente</h2>
-<br />
+<div class="d-flex col-6">
+    <h2 class="text-center">Cadastro de Paciente</h2>
+    <br />
 
-<mensagem texto="@TempData["msg"]"></mensagem>
+    <mensagem texto="@TempData["msg"]"></mensagem>
 
-<form asp-action="Cadastrar">
-    <partial name="_Form" />
+    <form asp-action="Cadastrar">
+        <partial name="_Form" />
 
-    <button class="btn btn-success">Salvar</button>
-    <a asp-action="index" class="btn btn-outline-secondary">Voltar</a>
-</form>
+        <button class="btn btn-success">Salvar</button>
+        <a asp-action="index" class="btn btn-outline-secondary">Voltar</a>
+    </form>
+</div>
+<div class="d-flex col-6">
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Nome</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var p in ViewBag.pacientes)
+            {
+                <tr>
+                    <td>@p.Nome</td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
