--- a/fiap.webapp.check2.hospital/fiap.webapp.check2.hospital/Views/Hospital/_Form.cshtml
+++ b/fiap.webapp.check2.hospital/fiap.webapp.check2.hospital/Views/Hospital/_Form.cshtml
@@ -1,8 +1,10 @@
 ﻿@model Hospital
 
+
 <div class="form-group">
     <label asp-for="Nome"></label>
     <input asp-for="Nome" class="form-control" />
+    <span asp-validation-for="Nome" class="text-danger mb-3" style="text-align: center"></span>
 </div>
 
 <div class="form-group">
@@ -12,22 +14,27 @@
 <div class="form-group">
     <label asp-for="Endereco.Rua"></label>
     <input asp-for="Endereco.Rua" class="form-control" />
+    <span asp-validation-for="Endereco.Rua" class="text-danger mb-3" style="text-align: center"></span>
 </div>
 
 <div class="col-12" style="display:flex; flex-direction: row; align-content: center; padding: 0">
     <div class="form-group mr-5 w-100">
         <label asp-for="Endereco.Bairro"></label>
         <input asp-for="Endereco.Bairro" class="form-control" />
+        <span asp-validation-for="Endereco.Bairro" class="text-danger mb-3" style="text-align: center"></span>
     </div>
 
     <div class="form-group w-100">
         <label asp-for="Endereco.Cep"></label>
-        <input asp-for="Endereco.Cep" class="form-control" id="cep"/>
+        <input asp-for="Endereco.Cep" class="form-control" id="cep" />
+        <span asp-validation-for="Endereco.Cep" class="text-danger mb-3" style="text-align: center"></span>
     </div>
 </div>
 <div class="form-group">
     <label asp-for="Capacidade"></label>
-    <input asp-for="Capacidade" class="form-control" />
+    <input asp-for="Capacidade" pattern="(^[0-9]{0,5})" title="No formato: 150, 300, 222" class="form-control" />
+    <span asp-validation-for="Capacidade" class="text-danger mb-3" style="text-align: center"></span>
+
 </div>
 <script type="text/javascript">
     $("#cep").mask("00000-000");
