--- a/fiap.webapp.check2.hospital/fiap.webapp.check2.hospital/Views/Hospital/Index.cshtml
+++ b/fiap.webapp.check2.hospital/fiap.webapp.check2.hospital/Views/Hospital/Index.cshtml
@@ -9,8 +9,7 @@
 
     <div class="row">
         <div class="ml-3 mb-3">
-            <a asp-action="Cadastrar" class="btn btn-secondary">Adicionar venda</a>
-            <a asp-action="Index" asp-controller="Home" class="btn btn-warning">Buscar por sabor</a>
+            <a asp-action="Index" asp-controller="Home" class="btn btn-warning">Buscar Hospitais</a>
         </div>
         @if (ViewBag.sabor != null)
         {
@@ -21,12 +20,20 @@
 
     <table class="table text-center">
         <cabecalho></cabecalho>
+        <tr>
+            <th>Código</th>
+            <th>Nome</th>
+            <th>Capacidade</th>
+            <th>Endereço</th>
+            <th>Ação</th>
+        </tr>
         @foreach (var item in Model)
         {
     <tr>
         <td>@item.HospitalId</td>
         <td>@item.Nome</td>
         <td>@item.Capacidade</td>
+        <td>@item.Endereco.Rua, @item.Endereco.Bairro (@item.Endereco.Cep)</td>
         <td>
             <form asp-action="index">
                 <a class="btn btn-outline-info btn-sm" asp-action="editar" asp-route-id="@item.HospitalId">Editar</a>
@@ -49,7 +56,7 @@
                     Deseja realmente apagar a venda de churros?
                 </div>
                 <div class="modal-footer">
-                    <form asp-action="remover">
+                    <form asp-action="Remover">
                         <input type="hidden" name="id" id="idChurros" />
                         <button type="button" class="btn btn-warning" data-dismiss="modal">Não</button>
                         <button type="submit" class="btn btn-secondary">Sim</button>
