--- a/fiap.webapp.check2.hospital/fiap.webapp.check2.hospital/Views/Paciente/_Form.cshtml
+++ b/fiap.webapp.check2.hospital/fiap.webapp.check2.hospital/Views/Paciente/_Form.cshtml
@@ -1,37 +1,47 @@
 ﻿@model Paciente
 
+
+
 <div class="form-group">
     <label asp-for="Nome"></label>
     <input asp-for="Nome" class="form-control" />
+    <span asp-validation-for="Nome" class="text-danger mb-3" style="text-align: center"></span>
 </div>
 
 <div class="form-group">
     <label asp-for="Cpf"></label>
     <input asp-for="Cpf" class="form-control" id="cpf" />
+    <span asp-validation-for="Cpf" class="text-danger mb-3" style="text-align: center"></span>
 </div>
+
 
 <div class="form-group">
     <label asp-for="DataNascimento"></label>
     <input asp-for="DataNascimento" class="form-control" />
+    <span asp-validation-for="DataNascimento" class="text-danger mb-3" style="text-align: center"></span>
 </div>
 
 <div class="form-group">
     <label asp-for="Endereco.Rua"></label>
     <input asp-for="Endereco.Rua" class="form-control" />
+    <span asp-validation-for="Endereco.Rua" class="text-danger mb-3" style="text-align: center"></span>
 </div>
 
 <div class="col-12" style="display:flex; flex-direction: row; align-content: center; padding: 0">
     <div class="form-group mr-5 w-100">
         <label asp-for="Endereco.Bairro"></label>
         <input asp-for="Endereco.Bairro" class="form-control" />
+        <span asp-validation-for="Endereco.Bairro" class="text-danger mb-3" style="text-align: center"></span>
     </div>
 
     <div class="form-group w-100">
         <label asp-for="Endereco.Cep"></label>
-        <input asp-for="Endereco.Cep" class="form-control" id="cep"/>
+        <input asp-for="Endereco.Cep" class="form-control" id="cep" />
+        <span asp-validation-for="Endereco.Cep" class="text-danger mb-3" style="text-align: center"></span>
+
     </div>
 </div>
 <script type="text/javascript">
     $("#cep").mask("00000-000");
-    $("#cpf").mask("999.999.99-99");
+    $("#cpf").mask("999.999.999-99");
 </script>
