--- a/fiap.webapp.check2.hospital/fiap.webapp.check2.hospital/Views/Hospital/Cadastrar.cshtml
+++ b/fiap.webapp.check2.hospital/fiap.webapp.check2.hospital/Views/Hospital/Cadastrar.cshtml
@@ -8,7 +8,7 @@
 
 <mensagem texto="@TempData["msg"]"></mensagem>
 
-<form asp-action="Cadastrar">
+<form asp-action="Cadastrar" asp-controller="Hospital">
     <partial name="_Form" />
 
     <button class="btn btn-success">Salvar</button>
