--- a/fiap.webapp.check2.hospital/fiap.webapp.check2.hospital/Views/Paciente/Index.cshtml
+++ b/fiap.webapp.check2.hospital/fiap.webapp.check2.hospital/Views/Paciente/Index.cshtml
@@ -10,6 +10,7 @@
 <div class="row">
     <div class="ml-3 mb-3">
         <a asp-action="Index" asp-controller="Home" class="btn btn-warning">Buscar Pacientes</a>
+        <a asp-action="Cadastrar" asp-controller="Doenca" class="btn btn-warning mb-3 ml-3">Cadastrar nova doença</a>
     </div>
     @if (ViewBag.sabor != null)
     {
@@ -26,6 +27,7 @@
         <th>Cpf</th>
         <th>Endereço</th>
         <th>Data Nascimento</th>
+        <th>Ações</th>
     </tr>
     @foreach (var item in Model)
     {
@@ -35,6 +37,7 @@
     <td>@item.Cpf</td>
     <td>@item.Endereco.Rua, @item.Endereco.Bairro (@item.Endereco.Cep)</td>
     <td>@item.DataNascimento.Value.ToShortDateString()</td>
+    <td><a asp-action="CadastrarDoencaPraPaciente" asp-controller="Paciente" asp-route-id="@item.PacienteId" class="btn btn-dark mb-3 ml-3">Cadastrar doença para esse paciente</a></td>
 </tr>
 }
 </table>
