--- a/fiap.webapp.check2.hospital/fiap.webapp.check2.hospital/Views/Home/Index.cshtml
+++ b/fiap.webapp.check2.hospital/fiap.webapp.check2.hospital/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
         <row class="mt-4">
             <div class="d-flex row my-auto justify-content-around align-content-center">
                 <div class="col-md-5 div-warning">
-                    <span style="display: flex; justify-content: center; font-size: 40px; color: #FFc107" class="material-icons ml-2 mb-1">manage_accounts</span>
+                    <span style="display: flex; justify-content: center; font-size: 40px; color: #FFc107" class="material-icons ml-2 mb-1">local_hospital</span>
                     <h2 style="display: flex; justify-content: center;" class="mb-5 bold">Hospital</h2>
 
                     <div class="mx-auto row justify-content-center">
