--- a/fiap.webapp.check2.hospital/fiap.webapp.check2.hospital/Views/Paciente/CadastrarDoenca.cshtml
+++ b/fiap.webapp.check2.hospital/fiap.webapp.check2.hospital/Views/Paciente/CadastrarDoenca.cshtml
@@ -10,8 +10,9 @@
         </select>
     </div>
     <input type="submit" class="btn btn-success" value="Salvar"/>
+    
 </form>
-    <a asp-action="Index">Voltar</a>
+    <a asp-action="Index" class="btn btn-outline-dark">Voltar</a>
 
 
 <!--
