--- a/fiap.webapp.check2.hospital/fiap.webapp.check2.hospital/Views/Doenca/_Form.cshtml
+++ b/fiap.webapp.check2.hospital/fiap.webapp.check2.hospital/Views/Doenca/_Form.cshtml
@@ -13,7 +13,7 @@
     <span asp-validation-for="Sintomas" class="text-danger mb-3" style="text-align: center"></span>
 </div>
 
-<div class="form-group">
+@*<div class="form-group">
     <input asp-for="Pacientes" type="hidden" value="" class="form-control" />
-</div>
+</div>*@
 
