--- a/fiap.webapp.check2.hospital/fiap.webapp.check2.hospital/Views/Hospital/Cadastrar.cshtml
+++ b/fiap.webapp.check2.hospital/fiap.webapp.check2.hospital/Views/Hospital/Cadastrar.cshtml
@@ -6,7 +6,7 @@
 <h2 class="text-center">Cadastro de Hospital</h2>
 <br />
 
-<mensagem texto="@TempData["msg"]"></mensagem>
+<feedback texto="@TempData["msg"]"></feedback>
 
 <form asp-action="Cadastrar" asp-controller="Hospital">
     <partial name="_Form" />
