--- a/fiap.webapp.check2.hospital/fiap.webapp.check2.hospital/Views/Paciente/_Form.cshtml
+++ b/fiap.webapp.check2.hospital/fiap.webapp.check2.hospital/Views/Paciente/_Form.cshtml
@@ -19,8 +19,9 @@
     <label asp-for="DataNascimento"></label>
     <input asp-for="DataNascimento" class="form-control" />
     <span asp-validation-for="DataNascimento" class="text-danger mb-3" style="text-align: center"></span>
-</div>
+</div><br />
 
+<h4>Endereço</h4>
 <div class="form-group">
     <label asp-for="Endereco.Rua"></label>
     <input asp-for="Endereco.Rua" class="form-control" />
