--- a/fiap.webapp.check2.hospital/fiap.webapp.check2.hospital/Views/_ViewImports.cshtml
+++ b/fiap.webapp.check2.hospital/fiap.webapp.check2.hospital/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using fiap.webapp.check2.hospital
 @using fiap.webapp.check2.hospital.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, fiap.webapp.check2.hospital
