--- a/fiap.webapp.check2.hospital/fiap.webapp.check2.hospital/Views/Paciente/Cadastrar.cshtml
+++ b/fiap.webapp.check2.hospital/fiap.webapp.check2.hospital/Views/Paciente/Cadastrar.cshtml
@@ -12,6 +12,6 @@
 
     <partial name="_Form" />
 
-    <button class="btn btn-success">Salvar</button>
-    <a asp-action="index" class="btn btn-outline-secondary">Voltar</a>
+    <button class="btn btn-warning">Salvar</button>
+    <a asp-action="index" class="btn btn-outline-dark">Voltar</a>
 </form>
