--- a/fiap.webapp.check2.hospital/fiap.webapp.check2.hospital/Views/Paciente/Index.cshtml
+++ b/fiap.webapp.check2.hospital/fiap.webapp.check2.hospital/Views/Paciente/Index.cshtml
@@ -4,19 +4,21 @@
 
 <h2>Listagem de Pacientes</h2>
 <br />
-
 <mensagem texto="@TempData["msg"]"></mensagem>
-
 <div class="row">
     <div class="ml-3 mb-3">
-        <a asp-action="Index" asp-controller="Home" class="btn btn-warning">Buscar Pacientes</a>
-        <a asp-action="Cadastrar" asp-controller="Doenca" class="btn btn-warning ml-3">Cadastrar nova doença</a>
+            <form class="d-flex" asp-action="index">
+                <input name="pesquisa" class="form-control col-9 mr-2" id="pesquisa" />
+                <button type="submit" class="btn btn-warning col-3">Buscar</button>
+            </form>
+        <a asp-action="Cadastrar" class="btn btn-warning mt-4">Cadastrar novo Paciente</a>
     </div>
-    @if (ViewBag.sabor != null)
+    @if (ViewBag.nomePaciente != null)
     {
 <div class="ml-md-auto mr-3">
-    <p style="border: 2px #ccc solid; padding: 5px; border-radius: 5px">@ViewBag.sabor <a asp-action="index"><img src="~/img/x.png" /></a></p>
-</div>}
+    <p style="border: 2px #ccc solid; padding: 5px; border-radius: 5px" class="d-flex">@ViewBag.nomePaciente <a asp-action="index"><span class="material-icons d-flex align-content-center text-danger ml-2">cancel</span></a></p>
+</div>
+    }
 </div>
 
 <table class="table text-center">
