--- a/fiap.webapp.check2.hospital/fiap.webapp.check2.hospital/Views/Hospital/Cadastrar.cshtml
+++ b/fiap.webapp.check2.hospital/fiap.webapp.check2.hospital/Views/Hospital/Cadastrar.cshtml
@@ -11,6 +11,6 @@
 <form asp-action="Cadastrar" asp-controller="Hospital">
     <partial name="_Form" />
 
-    <button class="btn btn-success">Salvar</button>
-    <a asp-action="index" class="btn btn-outline-secondary">Voltar</a>
+    <button class="btn btn-warning">Salvar</button>
+    <a asp-action="index" class="btn btn-outline-dark">Voltar</a>
 </form>
