--- a/fiap.webapp.check2.hospital/fiap.webapp.check2.hospital/Views/Doenca/Cadastrar.cshtml
+++ b/fiap.webapp.check2.hospital/fiap.webapp.check2.hospital/Views/Doenca/Cadastrar.cshtml
@@ -8,6 +8,6 @@
 <form asp-action="Cadastrar" asp-controller="Doenca">
     <partial name="_Form" />
     
-    <button class="btn btn-success">Salvar</button>
-    <a asp-action="index" asp-controller="Paciente" class="btn btn-outline-secondary">Voltar</a>
+    <button class="btn btn-warning">Salvar</button>
+    <a asp-action="index" asp-controller="Paciente" class="btn btn-outline-secondary">Listar</a>
 </form>
