--- a/fiap.webapp.check2.hospital/fiap.webapp.check2.hospital/Views/Paciente/Cadastrar.cshtml
+++ b/fiap.webapp.check2.hospital/fiap.webapp.check2.hospital/Views/Paciente/Cadastrar.cshtml
@@ -13,5 +13,5 @@
     <partial name="_Form" />
 
     <button class="btn btn-warning">Salvar</button>
-    <a asp-action="index" class="btn btn-outline-dark">Voltar</a>
+    <a asp-action="index" class="btn btn-outline-dark">Listar</a>
 </form>
